<resources>
    <string name="app_name">Navigator</string>
    <string name="title_activity_settings">Settings</string>

    <string name="run_as_service">Run as a service</string>
    <string name="run_as_service_summary">Run this application as a service without keeping the app open</string>
    <string name="remote_mac_address">Remote MAC address</string>
    <string name="remote_mac_address_default">00:00:00:00:00:00</string>
    <string name="notification_access">Notification access</string>
    <string name="notification_access_summary">Grant access to status notifications</string>
    <string name="mac_format_error">Format must be A1:BB:3C:44:DE:9F</string>
    <string name="kill_service">Kill service</string>
    <string name="start_service">Start service</string>
    <string name="start_at_boot">Start at boot</string>
    <string name="start_service_at_boot">Enable to automatically start the service after the operating system boots up</string>
    <string name="notifications">Notifications</string>
    <string name="configure_notifications">Configure notifications</string>
    <string name="service">Service</string>
    <string name="navigacija">Navigacija</string>
</resources>
